[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber_ticket_env"
version = "1.0.0"
description = "CyberTicket: Automated IT Support Desk OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core"
]
